--- a/Audio/style.css
+++ b/Audio/style.css
@@ -5,6 +5,14 @@ html, body {
     font-family: monospace;
 }
 
+div {
+    font-size: 1.5em;
+}
+
+#gainContainer {
+    background: #F79F79;
+}
+
 .button {
     margin-left: 0.6em;
     margin-right: 0.5em;
@@ -18,4 +26,41 @@ html, body {
 .button:active {
     background: white;
     color: #e09236;
+}
+
+.slider {
+    margin: 0;
+    -webkit-appearance: none;
+    appearance: none;
+    width: 100%;
+    height: 25px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.slider:hover {
+    opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    background: #1dba9d;
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    -moz-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    background: #1dba9d;
+    cursor: pointer;
+    border: none;
+    border-radius: 0%;
 }
