--- a/Audio/style.css
+++ b/Audio/style.css
@@ -11,6 +11,16 @@ div {
     font-size: 1.5em;
 }
 
+#selectList {
+    font-size: 1em;
+    font-family: monospace;
+    margin: 1.5%;
+}
+
+#reverbContainer {
+    background: #2e41ac;
+}
+
 #gainContainer {
     background: #F79F79;
 }
